<resources>
    <string name="app_name">Лапушки</string>
    <!-- Menu strings -->
    <string name="ad">Объявления</string>
    <string name="ad_lost">Потерянные</string>
    <string name="ad_found">Найденные</string>
    <string name="fav">Избранное</string>
    <string name="create_ad">Создать объявление</string>
    <string name="account">Профиль</string>
    <string name="register">Регистрация</string>
    <string name="exit">Выход</string>
    <string name="entrance">Вход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите в аккаунт или зарегистрируйтесь</string>
    <string name="my_ad">Мои объявления</string>
    <string name="def">Разное</string>
    <string name="vse">Все объявления</string>
    <!-- Sign dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_action">Зарегистрироваться</string>
    <string name="entrance_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="reg_error">Не удалось зарегистрироваться!</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_email">На вашу почту была отправленна ссылка для подтверждения вашего аккаунта!
                                           Пожалуйста подтвердите ваш аккаунт!</string>
    <!--edit activity-->
    <string name="select_city">Выберите город*</string>
    <string name="city">Город</string>
    <string name="adress">Адрес</string>
    <string name="adress_hint">Адрес находки/пропажи</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">Номер телефона</string>
    <string name="category">Категория</string>
    <string name="select_category">Выберите категорию*</string>
    <string name="Animal">Животное</string>
    <string name="select_animal">Выберите вид животного*</string>
    <string name="description">Описание</string>
    <string name="description_hint">Описание*</string>
    <string name="publish">Опубликовать</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>



</resources>